arches/app/media/css/arches-nifty.css
/* ... */
a.list-group-item:not(.active):hover, .clear-find:hover, div .switch label:hover, #demo-dt-selection tbody tr:hover, .highlight, .wizard-level-tile:hover, .editable-title:hover, .clear-find:hover, div .switch label:hover, #demo-dt-selection tbody tr:hover, .highlight, .wizard-level-tile:hover, .editable-title:hover, .clear-find:hover, div .switch label:hover, #demo-dt-selection tbody tr:hover, .highlight, .editable-card:hover, .clear-node-search:hover, .dismiss-card-library:hover {
    cursor: pointer;
}
.grid-item--width2, .columns .form-text.form-checkbox:not(.btn), .form-text.form-radio:not(.btn), .columns .form-text.form-checkbox:not(.btn), .form-text.form-radio:not(.btn), .grid-item--width2, .columns .form-text.form-checkbox:not(.btn), .form-text.form-radio:not(.btn), .grid-item--width2 {
    width: 200px;
}
.select2-search, .dropdown-shim, .dropdown-shim, .dropdown-shim {
    margin-top: 10px;
}
.relative, .slide, .relative, .slide, .relative, .slide, .relative {
    position: relative;
}
.tile-record:hover, .note-editable, .note-editable, .tile-record:hover, .note-editable, .tile-record:hover, .note-editable, .tile-record:hover, .library-tools-icon.active, .library-close-btn:hover {
    color: #123;
}
.morphsearch-input::-webkit-input-placeholder, .morphsearch-input:-moz-placeholder, .morphsearch-input::-moz-placeholder, .morphsearch-input:-ms-input-placeholder, .resource-grid-tools-container a, .btn-flat-trans:focus, .resource-grid-tools-container a, .btn-flat-trans:focus, .resource-grid-tools-container a, .btn-flat-trans:focus {
    color: #777;
}
.text-green, .rp-results-icon-color, .text-green, .rp-results-icon-color, .text-green, .rp-results-icon-color, .text-green, .rp-results-icon-color {
    color: #139F78;
}
.o-nav-library-tab:not(.active):hover, .selected, .o-nav-library-tab:not(.active):hover, .selected, .o-nav-library-tab:not(.active):hover, .selected {
    background: #f4f4f4;
}
.btn-flat.selected, .btn-flat-trans.selected, .btn-flat.selected, .btn-flat-trans.selected, .btn-flat-green, .btn-flat.selected, .btn-flat-trans.selected {
    background: #8ce196;
    color: #fff;
}
.btn-flat-trans, .btn-flat.right-border:hover, .btn-flat.right-border:focus, .btn-flat-trans, .btn-flat.right-border:hover, .btn-flat.right-border:focus, .btn-flat-trans, .btn-flat.right-border:hover, .btn-flat.right-border:focus {
    background: transparent;
    color: #777;
}
.cd-dark > .panel-body > .card-item:hover, .cd-dark > .panel-body > .card-item-group > .card-item:hover, .cd-dark > .panel-body > .item-selected, .cd-dark > .panel-body > .card-item:hover, .cd-dark > .panel-body > .card-item-group > .card-item:hover, .cd-dark > .panel-body > .item-selected {
    background-color: #37495b;
}
.cd-dark > .panel-body > .card-item > a, .cd-dark > .panel-body > .card-item-group > .card-item > a, .cd-dark > .panel-body > .card-item > a, .cd-dark > .panel-body > .card-item-group > .card-item > a {
    color: #e5e5e5;
}
.cd-form-container > .cd-dark, .cd-config-panel > .cd-dark, .cd-form-container > .cd-dark, .cd-config-panel > .cd-dark {
    background-color: #37495b;
    border-left-width: 0;
    border-top: 1px solid #37495b;
}
.cd-form-container > .cd-light, .cd-config-panel > .cd-light, .cd-form-container > .cd-light, .cd-config-panel > .cd-light {
    background-color: #fafafa;
    border-left-width: 0;
    border-top: 1px solid #ddd;
}
.cd-form-container > .cd-dark > div > .panel-body > div > .node-widget-label > .col-sm-12 > .form-control:focus, .cd-config-panel > .cd-dark > div > .panel-body > div > .node-widget-label > .col-sm-12 > .form-control:focus, .cd-form-container > .cd-dark > div > .panel-body > div > .node-widget-label > .col-sm-12 > .form-control:focus, .cd-config-panel > .cd-dark > div > .panel-body > div > .node-widget-label > .col-sm-12 > .form-control:focus {
    border-color: #4682B4;
}
.active a span .edit-card-element, h3 .edit-card-element, span .edit-card-element, .wizard-level-tile .edit-card-element, .active a span .edit-card-element, h3 .edit-card-element, span .edit-card-element, .wizard-level-tile .edit-card-element {
    display: inline-block;
}
.editable:hover, .editable.selected, .editable:hover, .editable.selected {
    background: #C1F8E9;
}
.profile-contacts-list, .profile-user-list {
    list-style: none;
    padding-left: 10px;
    width: 200px;
}
.cd-light div div .node-title, .cd-light div div .card-manager-title {
    color: #37495b;
}
.ep-form-alert {
	position: absolute;
	top: 50px;
    z-index:1000;
	width: 100%;
	height: 0px;
    display: none;
	padding: 10px 25px;
	color: #fff;
	transition: all .40s ease;
}
.alert-active .ep-form-alert {
    display: block;
    height: 90px;
}
.ep-alert-red {
	background: #f87359;
	border: 1px solid #B72F16;
	border-right-width: 0px;
	border-left-width: 0px;
}
.ep-alert-blue {
	background: #57c1df;
	border: 1px solid #1495B9;
	border-right-width: 0px;
	border-left-width: 0px;
}
.ep-alert-mint {
	background: #53d1ad;
	border: 1px solid #13A77E;
	border-right-width: 0px;
	border-left-width: 0px;
}
.ep-form-alert-shim {
	margin-top: 90px;
	transition: all .40s ease;
}
.ep-form-alert-title {
	font-size: 15px;
	font-weight: 600;
	margin-top: 0px;
	margin-bottom: 3px;
}
.ep-form-alert-text {
	font-size: 12px;
	font-weight: 400;
}
.ep-form-alert-default-dismiss {
	position: absolute;
	top: 10px;
	right: 25px;
	font-size: 16px;
}
.ep-form-alert-default-dismiss:hover {
	cursor: pointer;
	color: #f9f9f9;
}
.ep-form-alert-buttons {
	position: absolute;
	bottom: 10px;
	right: 25px;
}
.graph-list-header .ep-form-alert {
	position: relative;
    top: 0px;
}
.switch-section {
    position: relative;
}
.switch-section.disabled::before {
    content: '.';
    position: absolute;
    margin-left: -5px;
    background: rgba(214,214,214,0.3);
    color: transparent;
    z-index: 1000000;
    width: 100%;
    height: 100%;
}
/* ... */

